backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /livez
              port: http
          startupProbe:
            httpGet:
              path: /readyz
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 100Mi
