redis_sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      containers:
        - name: main
          image: redis
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 150Mi
          livenessProbe:
            exec:
              command:
              - redis-cli
              - incr
              - probe
          startupProbe:
            tcpSocket:
              port: redis
          volumeMounts:
            - mountPath: /data
              name: redis
