backend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - astratex.sikademo.com
        - '*.astratex.sikademo.com'
      secretName: astratex.sikademo.com-tls
  rules:
    - host: backend.astratex.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
