frontend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - astratex.sikademo.com
        - '*.astratex.sikademo.com'
      secretName: astratex.sikademo.com-tls
  rules:
    - host: frontend.astratex.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
